main functionality for bubbles completed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 	</head>
 	<body>
 		<div id='app-wrapper'>
-
+			<header>
+				<img src="./needle-to-left.png" alt="">
+			</header>
+			<div class='bubble-area'></div>
+			<footer></footer>
 		</div>
 		<script src="index.js"></script>
 	</body>
