added physic effects and controls

--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 				<img src="./needle-to-left.png" alt="">
 			</header>
 			<div class='bubble-area'></div>
-			<footer></footer>
+			<footer>
+				<div class="restart-button-container">
+					<button class="restart-button">Start</button>
+				</div>
+				<div class='score-container'>
+					<div class="bubbles">bubbles: 0</div>
+					<div class="misses">misses: 0</div>
+					<div class="punctures">punctures: 0</div>
+				</div>
+			</footer>
 		</div>
 		<script src="index.js"></script>
 	</body>
