implement grab needle, commit before try Timer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<div id='app-wrapper'>
 			<header>
-				<img src="./needle-to-left.png" alt="">
+				<img src="./needle-to-left.png" alt="" draggable="false">
 			</header>
 			<div class='bubble-area'></div>
 			<footer>
@@ -21,6 +21,7 @@
 				</div>
 			</footer>
 		</div>
+		<script src="classes.js"></script>
 		<script src="index.js"></script>
 	</body>
 </html>
