v 1.0 - no major bugs, main functionality and physics - done

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 			<header>
 				<img src="./needle-to-left.png" alt="" draggable="false">
 			</header>
-			<div class='bubble-area'></div>
+			<div class='bubble-area'>
+				<div class='information-panel'></div>
+			</div>
 			<footer>
-				<div class="restart-button-container">
+				<div class="controls">
 					<button class="restart-button">Start</button>
+					<button class="pause-button" disabled='true'>Pause</button>
+					<button class="stop-button" disabled='true'>Stop</button>
 				</div>
 				<div class='score-container'>
 					<div class="bubbles">bubbles: 0</div>
